--- a/po/de.po
+++ b/po/de.po
@@ -3,14 +3,21 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Moritz Bruder <muesli4@gmail.com>, 2018
+# Tobias Bannert <tobannert@gmail.com>, 2018
+# nautilusx, 2018
+# Christian Wagner <wagnerschristian@gmail.com>, 2018
+# debianer82 <debianer82@gmail.com>, 2018
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-11-28 10:47+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: nautilusx, 2018\n"
+"POT-Creation-Date: 2018-03-16 15:01+0100\n"
+"PO-Revision-Date: 2018-03-11 16:27+0000\n"
+"Last-Translator: debianer82 <debianer82@gmail.com>, 2018\n"
 "Language-Team: German (https://www.transifex.com/mate/teams/13566/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -49,7 +56,7 @@ msgstr "Kein Schreibtischhintergrund"
 
 #: ../desktop/mate-desktop.xml.in.in.h:2
 msgid "Float into MATE"
-msgstr ""
+msgstr "In MATE eintauchen"
 
 #: ../desktop/mate-desktop.xml.in.in.h:3
 msgid "Green Traditional"
@@ -95,7 +102,7 @@ msgstr "Frische Blume"
 #. You might want to translate it into the equivalent words of your language
 #: ../nature/mate-nature.xml.in.in.h:6
 msgid "Green Meadow"
-msgstr "Grüne Au"
+msgstr "Grüne Wiese"
 
 #: ../nature/mate-nature.xml.in.in.h:7
 msgid "Aqua"
