--- a/po/pl.po
+++ b/po/pl.po
@@ -3,14 +3,19 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Stefano Karapetsas <stefano@karapetsas.com>, 2018
+# Przemek P <ppjg@dami.pl>, 2018
+# Piotr Drąg <piotrdrag@gmail.com>, 2018
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-11-28 10:47+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Przemek P <ppjg@dami.pl>, 2017\n"
+"POT-Creation-Date: 2018-03-16 15:01+0100\n"
+"PO-Revision-Date: 2018-03-11 16:27+0000\n"
+"Last-Translator: Piotr Drąg <piotrdrag@gmail.com>, 2018\n"
 "Language-Team: Polish (https://www.transifex.com/mate/teams/13566/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,11 +30,11 @@ msgstr "Łuk"
 
 #: ../abstract/mate-abstract.xml.in.in.h:3
 msgid "Flow"
-msgstr ""
+msgstr "Przypływ"
 
 #: ../abstract/mate-abstract.xml.in.in.h:4
 msgid "Gulp"
-msgstr ""
+msgstr "Łyk"
 
 #: ../abstract/mate-abstract.xml.in.in.h:5
 msgid "Silk"
@@ -49,7 +54,7 @@ msgstr "Bez tła"
 
 #: ../desktop/mate-desktop.xml.in.in.h:2
 msgid "Float into MATE"
-msgstr ""
+msgstr "Unoś się w MATE"
 
 #: ../desktop/mate-desktop.xml.in.in.h:3
 msgid "Green Traditional"
@@ -111,15 +116,15 @@ msgstr "Burza"
 
 #: ../nature/mate-nature.xml.in.in.h:10
 msgid "Two Wings"
-msgstr "Dwa skrzydła"
+msgstr "Dmuchawce"
 
 #: ../nature/mate-nature.xml.in.in.h:11
 msgid "Lady Bird"
-msgstr ""
+msgstr "Biedronka"
 
 #: ../nature/mate-nature.xml.in.in.h:12
 msgid "Blinds"
-msgstr ""
+msgstr "Żaluzje"
 
 #: ../nature/mate-nature.xml.in.in.h:13
 msgid "Rain Drops"
@@ -135,4 +140,4 @@ msgstr "Ogród"
 
 #: ../nature/mate-nature.xml.in.in.h:16
 msgid "Wood"
-msgstr ""
+msgstr "Drewno"
