--- a/po/pt.po
+++ b/po/pt.po
@@ -3,14 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
+# Translators:
+# Rui <xymarior@yandex.com>, 2018
+# José Vieira <jvieira33@sapo.pt>, 2018
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-11-28 10:47+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: José Vieira <jvieira33@sapo.pt>, 2017\n"
+"POT-Creation-Date: 2018-03-16 15:01+0100\n"
+"PO-Revision-Date: 2018-03-11 16:27+0000\n"
+"Last-Translator: José Vieira <jvieira33@sapo.pt>, 2018\n"
 "Language-Team: Portuguese (https://www.transifex.com/mate/teams/13566/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -77,7 +81,7 @@ msgstr "Ubuntu MATE, Escuro"
 
 #: ../desktop/mate-desktop.xml.in.in.h:9
 msgid "Ubuntu MATE Radioactive"
-msgstr "Ubuntu MATE, Radioactivo"
+msgstr "Ubuntu MATE, Radioativo"
 
 #: ../desktop/mate-desktop.xml.in.in.h:10
 msgid "Ubuntu MATE Warm"
