--- a/po/de.po
+++ b/po/de.po
@@ -5,19 +5,19 @@
 # 
 # Translators:
 # Moritz Bruder <muesli4@gmail.com>, 2018
-# Tobias Bannert <tobannert@gmail.com>, 2018
 # nautilusx, 2018
 # Christian Wagner <wagnerschristian@gmail.com>, 2018
 # debianer82 <debianer82@gmail.com>, 2018
+# Tobias Bannert <tobannert@gmail.com>, 2018
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-16 15:01+0100\n"
+"POT-Creation-Date: 2019-02-23 15:27+0100\n"
 "PO-Revision-Date: 2018-03-11 16:27+0000\n"
-"Last-Translator: debianer82 <debianer82@gmail.com>, 2018\n"
+"Last-Translator: Tobias Bannert <tobannert@gmail.com>, 2018\n"
 "Language-Team: German (https://www.transifex.com/mate/teams/13566/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
