--- a/po/it.po
+++ b/po/it.po
@@ -4,7 +4,7 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# Giuseppe Pignataro (Fastbyte01) <rogepix@gmail.com>, 2018
+# Giuseppe Pignataro <rogepix@gmail.com>, 2018
 # l3nn4rt, 2018
 # 
 #, fuzzy
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MATE Desktop Environment\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-16 15:01+0100\n"
+"POT-Creation-Date: 2019-02-23 15:27+0100\n"
 "PO-Revision-Date: 2018-03-11 16:27+0000\n"
 "Last-Translator: l3nn4rt, 2018\n"
 "Language-Team: Italian (https://www.transifex.com/mate/teams/13566/it/)\n"
