--- a/mate-backgrounds.pot
+++ b/mate-backgrounds.pot
@@ -3,18 +3,17 @@
 # This file is distributed under the same license as the mate-backgrounds package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: mate-backgrounds 1.22.0\n"
+"Project-Id-Version: mate-backgrounds 1.23.0\n"
 "Report-Msgid-Bugs-To: http://www.mate-desktop.org\n"
-"POT-Creation-Date: 2019-05-15 20:24+0200\n"
+"POT-Creation-Date: 2019-11-06 12:38+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. From http://code.google.com/p/gnome-colors/
