--- a/AUTHORS
+++ b/AUTHORS
@@ -8,6 +8,9 @@ Abstract
     Copyright © 2008 Daniel Galleguillos <dnlgalleguillos@gmail.com>
     Copyright © 2008 Hylke Bons <hylkebons@gmail.com>
 
+ - Elephants.png:
+    Copyright © 2020 Wyng Stancikaite <wyng.stancikaite@gmail.com>
+
 Desktop
  - GreenTraditional.jpg
     Copyright © 2012 l0r4n0n <info@stefan-geissler.net>
@@ -66,3 +69,4 @@ Nature
 
  - YellowFlower.jpg:
     Copyright © 2008 Charles Barbin <barbinch@free.fr>
+ 
