--- a/AUTHORS
+++ b/AUTHORS
@@ -8,7 +8,7 @@ Abstract
     Copyright © 2008 Daniel Galleguillos <dnlgalleguillos@gmail.com>
     Copyright © 2008 Hylke Bons <hylkebons@gmail.com>
 
- - Elephants.png:
+ - Elephants.jpg, Elephants_3840x2160.jpg, Elephants_5640x3172.jpg:
     Copyright © 2020 Wyng Stancikaite <wyng.stancikaite@gmail.com>
 
 Desktop
