--- a/po/es.po
+++ b/po/es.po
@@ -5,6 +5,7 @@
 # 
 # Translators:
 # Adolfo Jayme-Barrientos, 2018
+# Toni Estévez <toni.estevez@gmail.com>, 2020
 # 
 msgid ""
 msgstr ""
@@ -12,7 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://www.mate-desktop.org\n"
 "POT-Creation-Date: 2019-11-06 12:38+0100\n"
 "PO-Revision-Date: 2018-03-11 16:27+0000\n"
-"Last-Translator: Adolfo Jayme-Barrientos, 2018\n"
+"Last-Translator: Toni Estévez <toni.estevez@gmail.com>, 2020\n"
 "Language-Team: Spanish (https://www.transifex.com/mate/teams/13566/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -47,7 +48,7 @@ msgstr "Olas"
 
 #: desktop/mate-desktop.xml.in.in:5
 msgid "No Desktop Background"
-msgstr "Ningún fondo de escritorio"
+msgstr "Sin fondo de escritorio"
 
 #: desktop/mate-desktop.xml.in.in:13
 msgid "Float into MATE"
