--- a/po/fa.po
+++ b/po/fa.po
@@ -5,7 +5,7 @@
 # 
 # Translators:
 # Stefano Karapetsas <stefano@karapetsas.com>, 2018
-# Mohammadreza Abdollahzadeh <morealaz@gmail.com>, 2018
+# a8421664e61380eccf98265d27b51edb, 2018
 # 
 msgid ""
 msgstr ""
@@ -13,7 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://www.mate-desktop.org\n"
 "POT-Creation-Date: 2019-11-06 12:38+0100\n"
 "PO-Revision-Date: 2018-03-11 16:27+0000\n"
-"Last-Translator: Mohammadreza Abdollahzadeh <morealaz@gmail.com>, 2018\n"
+"Last-Translator: a8421664e61380eccf98265d27b51edb, 2018\n"
 "Language-Team: Persian (https://www.transifex.com/mate/teams/13566/fa/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
