--- a/po/it.po
+++ b/po/it.po
@@ -6,6 +6,7 @@
 # Translators:
 # Giuseppe Pignataro <rogepix@gmail.com>, 2018
 # l3nn4rt, 2018
+# Alessandro Volturno <alelvb@inwind.it>, 2020
 # 
 msgid ""
 msgstr ""
@@ -13,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://www.mate-desktop.org\n"
 "POT-Creation-Date: 2019-11-06 12:38+0100\n"
 "PO-Revision-Date: 2018-03-11 16:27+0000\n"
-"Last-Translator: l3nn4rt, 2018\n"
+"Last-Translator: Alessandro Volturno <alelvb@inwind.it>, 2020\n"
 "Language-Team: Italian (https://www.transifex.com/mate/teams/13566/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -126,7 +127,7 @@ msgstr "Solchi"
 
 #: nature/mate-nature.xml.in.in:57
 msgid "Rain Drops"
-msgstr "Pioggia"
+msgstr "Gocce di pioggia"
 
 #: nature/mate-nature.xml.in.in:63
 msgid "Yellow Flower"
