--- a/po/ast.po
+++ b/po/ast.po
@@ -6,7 +6,7 @@
 # Translators:
 # Xuacu Saturio <xuacusk8@gmail.com>, 2020
 # Stefano Karapetsas <stefano@karapetsas.com>, 2020
-# Ḷḷumex03 <tornes@opmbx.org>, 2020
+# Ḷḷumex03, 2020
 # 
 msgid ""
 msgstr ""
@@ -14,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://www.mate-desktop.org\n"
 "POT-Creation-Date: 2019-11-06 12:38+0100\n"
 "PO-Revision-Date: 2020-02-15 12:57+0000\n"
-"Last-Translator: Ḷḷumex03 <tornes@opmbx.org>, 2020\n"
+"Last-Translator: Ḷḷumex03, 2020\n"
 "Language-Team: Asturian (https://www.transifex.com/mate/teams/13566/ast/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
