--- a/po/hu.po
+++ b/po/hu.po
@@ -5,7 +5,7 @@
 # 
 # Translators:
 # István Szőllősi <szollosi.istv4n@gmail.com>, 2020
-# Balázs Meskó <meskobalazs@gmail.com>, 2020
+# Balázs Meskó <meskobalazs@mailbox.org>, 2020
 # 
 msgid ""
 msgstr ""
@@ -13,7 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://www.mate-desktop.org\n"
 "POT-Creation-Date: 2019-11-06 12:38+0100\n"
 "PO-Revision-Date: 2020-02-15 12:57+0000\n"
-"Last-Translator: Balázs Meskó <meskobalazs@gmail.com>, 2020\n"
+"Last-Translator: Balázs Meskó <meskobalazs@mailbox.org>, 2020\n"
 "Language-Team: Hungarian (https://www.transifex.com/mate/teams/13566/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
