--- a/po/nl.po
+++ b/po/nl.po
@@ -5,7 +5,7 @@
 # 
 # Translators:
 # Michael Steenbeek <m.o.steenbeek@gmail.com>, 2020
-# René Devers <rene.devers@gmail.com>, 2020
+# b9b0d258fa591da5350b6e67cf68cd68_9fecbb4 <28506b9ff23f99a34b566250ce31bbad_250479>, 2020
 # 
 msgid ""
 msgstr ""
@@ -13,7 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://www.mate-desktop.org\n"
 "POT-Creation-Date: 2019-11-06 12:38+0100\n"
 "PO-Revision-Date: 2020-02-15 12:57+0000\n"
-"Last-Translator: René Devers <rene.devers@gmail.com>, 2020\n"
+"Last-Translator: b9b0d258fa591da5350b6e67cf68cd68_9fecbb4 <28506b9ff23f99a34b566250ce31bbad_250479>, 2020\n"
 "Language-Team: Dutch (https://www.transifex.com/mate/teams/13566/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
