--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+### mate-backgrounds 1.24.2
+
+   * Translations update
+   * Added elephants wallpaper
+
 ### mate-backgrounds 1.24.1
 
    * Translations update
