--- a/po/it.po
+++ b/po/it.po
@@ -6,21 +6,21 @@
 # Translators:
 # Giuseppe Pignataro <rogepix@gmail.com>, 2018
 # l3nn4rt, 2018
-# Alessandro Volturno <alelvb@inwind.it>, 2020
+# Alessandro Volturno <alelvb@inwind.it>, 2022
 # 
 msgid ""
 msgstr ""
-"Project-Id-Version: mate-backgrounds 1.25.0\n"
+"Project-Id-Version: mate-backgrounds 1.26.0\n"
 "Report-Msgid-Bugs-To: http://www.mate-desktop.org\n"
-"POT-Creation-Date: 2021-06-20 12:58+0200\n"
+"POT-Creation-Date: 2022-10-29 15:33+0200\n"
 "PO-Revision-Date: 2018-03-11 16:27+0000\n"
-"Last-Translator: Alessandro Volturno <alelvb@inwind.it>, 2020\n"
+"Last-Translator: Alessandro Volturno <alelvb@inwind.it>, 2022\n"
 "Language-Team: Italian (https://www.transifex.com/mate/teams/13566/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: it\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=3; plural=n == 1 ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;\n"
 
 #. From http://code.google.com/p/gnome-colors/
 #: abstract/mate-abstract.xml.in.in:6
@@ -50,11 +50,11 @@ msgstr "Onde"
 #: abstract/mate-abstract.xml.in.in:61 abstract/mate-abstract.xml.in.in:70
 #: abstract/mate-abstract.xml.in.in:79
 msgid "Something slowly gets clear"
-msgstr "Qualcosa lentamente diviene chiaro"
+msgstr "Qualcosa che lentamente diviene chiaro"
 
 #: desktop/mate-desktop.xml.in.in:5
 msgid "No Desktop Background"
-msgstr "Nessun sfondo desktop"
+msgstr "Nessuno Sfondo della Scrivania"
 
 #: desktop/mate-desktop.xml.in.in:13
 msgid "Float into MATE"
@@ -70,11 +70,11 @@ msgstr "Strisce"
 
 #: desktop/mate-desktop.xml.in.in:34
 msgid "MATE Stripes Dark"
-msgstr "MATE strisce scure"
+msgstr "MATE Strisce Scuro"
 
 #: desktop/mate-desktop.xml.in.in:43
 msgid "MATE Stripes Light"
-msgstr "MATE strisce chiare"
+msgstr "MATE Strisce Chiaro"
 
 #: desktop/mate-desktop.xml.in.in:52
 msgid "Ubuntu MATE Cold"
@@ -108,7 +108,7 @@ msgstr "Prato verde"
 
 #: nature/mate-nature.xml.in.in:21
 msgid "Aqua"
-msgstr "Aqua"
+msgstr "Acqua"
 
 #: nature/mate-nature.xml.in.in:27
 msgid "Dune"
@@ -120,7 +120,7 @@ msgstr "Tempesta"
 
 #: nature/mate-nature.xml.in.in:39
 msgid "Two Wings"
-msgstr "Bocca di leone"
+msgstr "Due Ali"
 
 #: nature/mate-nature.xml.in.in:45
 msgid "Lady Bird"
@@ -128,7 +128,7 @@ msgstr "Coccinella"
 
 #: nature/mate-nature.xml.in.in:51
 msgid "Blinds"
-msgstr "Solchi"
+msgstr "Tenda"
 
 #: nature/mate-nature.xml.in.in:57
 msgid "Rain Drops"
