--- a/po/ja.po
+++ b/po/ja.po
@@ -5,15 +5,15 @@
 # 
 # Translators:
 # Rockers <sumorock@hotmail.com>, 2018
-# Green, 2021
+# Green, 2022
 # 
 msgid ""
 msgstr ""
-"Project-Id-Version: mate-backgrounds 1.25.0\n"
+"Project-Id-Version: mate-backgrounds 1.26.0\n"
 "Report-Msgid-Bugs-To: http://www.mate-desktop.org\n"
-"POT-Creation-Date: 2021-06-20 12:58+0200\n"
+"POT-Creation-Date: 2022-10-29 15:33+0200\n"
 "PO-Revision-Date: 2018-03-11 16:27+0000\n"
-"Last-Translator: Green, 2021\n"
+"Last-Translator: Green, 2022\n"
 "Language-Team: Japanese (https://www.transifex.com/mate/teams/13566/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -61,7 +61,7 @@ msgstr "フロート・イントゥー MATE"
 
 #: desktop/mate-desktop.xml.in.in:19
 msgid "Green Traditional"
-msgstr "グリーン・トラディショナル"
+msgstr "伝統的なグリーン"
 
 #: desktop/mate-desktop.xml.in.in:25
 msgid "Stripes"
